--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "react-test-utils": "0.0.1",
     "redux": "^3.6.0",
     "redux-logger": "^2.7.4",
+    "redux-saga": "^0.14.3",
     "redux-thunk": "^2.1.0"
   },
   "scripts": {
